--- a/src/fonts.scss
+++ b/src/fonts.scss
@@ -18,3 +18,17 @@
   font-style: normal;
   font-weight: 800;
 }
+
+@font-face {
+  font-family: El Messiri;
+  src: url("./assets/fonts/ElMessiri-Regular.ttf") format("truetype");
+  font-style: normal;
+  font-weight: 600;
+}
+
+@font-face {
+  font-family: El Messiri;
+  src: url("./assets/fonts/ElMessiri-Medium.ttf") format("truetype");
+  font-style: normal;
+  font-weight: 700;
+}
