Appointment form. Default background. Footer done

--- a/src/App.scss
+++ b/src/App.scss
@@ -15,3 +15,11 @@
   --main-black: #15343A;
   --main-font: Roboto, serif;
 }
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active{
+  -webkit-background-clip: text;
+  transition: background-color 5000s ease-in-out 0s;
+}
