--- a/src/components/IntroScreen/IntroScreen.module.scss
+++ b/src/components/IntroScreen/IntroScreen.module.scss
@@ -17,6 +17,7 @@
     text-align: start;
 
     margin-left: 120px;
+    margin-top: -100px;
 
     h1 {
       margin-bottom: 10px;
@@ -43,6 +44,7 @@
       align-items: center;
 
       margin-left: 0;
+      margin-top: 0;
       margin-bottom: 120px;
       padding-left: 38px;
       padding-right: 38px;
