--- a/src/components/OurTeam/OurTeam.module.scss
+++ b/src/components/OurTeam/OurTeam.module.scss
@@ -1,22 +1,44 @@
-.our_team {}
+.our_team {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
 
 .our_team_member {
+  width: 100%;
   display: flex;
+  flex-direction: row-reverse;
+  align-items: start;
+  justify-content: center;
+  gap: 50px;
 
-  &__title {}
-
-  &__description {}
-
-  &__figure {
-    float: left;
+  &__info {
+    width: 40%;
   }
+
+  &__title {
+    font-size: 2rem;
+    font-weight: bold;
+    text-align: start;
+  }
+
+  &__description {
+    font-size: 1.2rem;
+    text-align: start;
+  }
+
+  &__figure {}
 
   &__image {
     max-width: 400px;
     max-height: 600px;
     border-radius: 15px;
+    text-align: start;
   }
 
-  &__caption {}
+  &__caption {
+    font-size: 1.2rem;
+  }
 
 }
