Edited the fonts weight. Added json with data and some values to them

--- a/src/components/GoldButton/GoldButton.module.scss
+++ b/src/components/GoldButton/GoldButton.module.scss
@@ -8,6 +8,7 @@
   border-radius: 60px;
 
   color: white;
+  font-family: Roboto, serif;
   font-weight: 700;
   font-size: 20px;
   line-height: 24px;
