--- a/src/components/AddressAndContactsScreen/AddressAndContactsScreen.module.scss
+++ b/src/components/AddressAndContactsScreen/AddressAndContactsScreen.module.scss
@@ -7,6 +7,10 @@
     align-items: center;
   }
 
+  h1 {
+    font-size: 2.2rem;
+  }
+
   @media screen and (max-width: 1224px)  {
     &_container {
       flex-direction: column-reverse;
@@ -14,7 +18,7 @@
     }
 
     h1 {
-      font-size: 1.8rem;
+      font-size: 1.7rem;
     }
   }
 
