--- a/src/components/IntroScreen/IntroScreen.module.scss
+++ b/src/components/IntroScreen/IntroScreen.module.scss
@@ -20,13 +20,14 @@
     margin-top: -100px;
 
     h1 {
-      margin-bottom: 10px;
+      margin-bottom: 0;
       font-family: "El Messiri";
       font-weight: 700;
     }
 
     p {
       display: inline-block;
+      font-size: 18px;
       max-width: 485px;
       margin-bottom: 36px;
     }
