--- a/src/components/MakeAppointmentForm/MakeAppointmentForm.module.scss
+++ b/src/components/MakeAppointmentForm/MakeAppointmentForm.module.scss
@@ -4,7 +4,7 @@
   text-align: center;
 
   &__title {
-    font-size: 2em;
+    font-size: 2rem;
   }
 
 }
@@ -13,7 +13,7 @@
   display: grid;
   grid-template-rows: repeat(4, 1fr);
   grid-template-columns: repeat(2, 1fr);
-  grid-gap: 30px;
+  grid-gap: 45px;
   max-width: 100%;
 
   &__name {
