--- a/src/components/OurTeam/OurTeam.module.scss
+++ b/src/components/OurTeam/OurTeam.module.scss
@@ -3,6 +3,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  gap: 50px;
 }
 
 .our_team_member {
@@ -14,12 +15,11 @@
   gap: 50px;
 
   &__info {
-    width: 40%;
+    width: 30%;
   }
 
   &__title {
-    font-size: 2rem;
-    font-weight: bold;
+    font-size: 1.7rem;
     text-align: start;
   }
 
@@ -31,14 +31,15 @@
   &__figure {}
 
   &__image {
-    max-width: 400px;
-    max-height: 600px;
+    max-width: 300px;
+    max-height: 500px;
     border-radius: 15px;
     text-align: start;
   }
 
   &__caption {
     font-size: 1.2rem;
+    font-weight: 500;
   }
 
 }
