--- a/src/fonts.scss
+++ b/src/fonts.scss
@@ -1,4 +1,11 @@
 @font-face {
+    font-family: Roboto;
+    src: url("./assets/fonts/Roboto-Light.ttf") format("truetype");
+    font-style: normal;
+    font-weight: 500;
+}
+
+@font-face {
   font-family: Roboto;
   src: url("./assets/fonts/Roboto-Regular.ttf") format("truetype");
   font-style: normal;
