--- a/src/components/layout/Footer/Footer.module.scss
+++ b/src/components/layout/Footer/Footer.module.scss
@@ -1,4 +1,10 @@
 footer {
+  position: absolute;
+  bottom: 0;
+  z-index: 3;
+  width: 100%;
+  height: 260px;
+
   background: white;
   box-shadow: 0 0 5.1px 9px #1E19190D;
   margin-bottom: -15px;
@@ -13,6 +19,7 @@ footer {
   footer {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    height: 500px;
   }
 
   .footer_copyrights {
