--- a/src/components/OurTeam/OurTeam.module.scss
+++ b/src/components/OurTeam/OurTeam.module.scss
@@ -6,40 +6,8 @@
   gap: 50px;
 }
 
-.our_team_member {
-  width: 100%;
-  display: flex;
-  flex-direction: row-reverse;
-  align-items: start;
-  justify-content: center;
-  gap: 50px;
-
-  &__info {
-    width: 30%;
-  }
-
-  &__title {
-    font-size: 1.7rem;
-    text-align: start;
-  }
-
-  &__description {
-    font-size: 1.2rem;
-    text-align: start;
-  }
-
-  &__figure {}
-
-  &__image {
-    max-width: 300px;
-    max-height: 500px;
-    border-radius: 15px;
-    text-align: start;
-  }
-
-  &__caption {
-    font-size: 1.2rem;
-    font-weight: 500;
-  }
-
+@media screen and (max-width: 1224px) {
+    .our_team {
+      gap: 70px;
+    }
 }
