--- a/src/components/PriceTableComponents/ServiceRow/ServiceRow.module.scss
+++ b/src/components/PriceTableComponents/ServiceRow/ServiceRow.module.scss
@@ -5,3 +5,11 @@
   margin: 0 10px;
   cursor: pointer;
 }
+
+@media screen and (max-width: 1224px) {
+    .service_row {
+        h4 {
+          text-align: start;
+        }
+    }
+}
