Fixed a little more imports

--- a/src/fonts.scss
+++ b/src/fonts.scss
@@ -1,41 +1,41 @@
 @font-face {
     font-family: Roboto;
-    src: url("../public/assets/fonts/Roboto-Light.ttf") format("truetype");
+    src: url("/assets/fonts/Roboto-Light.ttf") format("truetype");
     font-style: normal;
     font-weight: 500;
 }
 
 @font-face {
   font-family: Roboto;
-  src: url("../public/assets/fonts/Roboto-Regular.ttf") format("truetype");
+  src: url("/assets/fonts/Roboto-Regular.ttf") format("truetype");
   font-style: normal;
   font-weight: 600;
 }
 
 @font-face {
   font-family: Roboto;
-  src: url("../public/assets/fonts/Roboto-Medium.ttf") format("truetype");
+  src: url("/assets/fonts/Roboto-Medium.ttf") format("truetype");
   font-style: normal;
   font-weight: 700;
 }
 
 @font-face {
   font-family: Roboto;
-  src: url("../public/assets/fonts/Roboto-Bold.ttf") format("truetype");
+  src: url("/assets/fonts/Roboto-Bold.ttf") format("truetype");
   font-style: normal;
   font-weight: 800;
 }
 
 @font-face {
   font-family: El Messiri;
-  src: url("../public/assets/fonts/ElMessiri-Regular.ttf") format("truetype");
+  src: url("/assets/fonts/ElMessiri-Regular.ttf") format("truetype");
   font-style: normal;
   font-weight: 600;
 }
 
 @font-face {
   font-family: El Messiri;
-  src: url("../public/assets/fonts/ElMessiri-Medium.ttf") format("truetype");
+  src: url("/assets/fonts/ElMessiri-Medium.ttf") format("truetype");
   font-style: normal;
   font-weight: 700;
 }
