--- a/src/components/layout/PageLayout/PageLayout.module.scss
+++ b/src/components/layout/PageLayout/PageLayout.module.scss
@@ -1,7 +1,7 @@
 .page_layout {
   position: relative;
   width: 100%;
-  min-height: 100vh;
+  min-height: 100dvh;
   padding-bottom: 260px;
 
   &__background {
