--- a/src/components/GoldButton/GoldButton.module.scss
+++ b/src/components/GoldButton/GoldButton.module.scss
@@ -24,6 +24,12 @@
     outline: none;
   }
 
+  &:disabled,
+  &[disabled]{
+    opacity: 0.7;
+    cursor: not-allowed;
+  }
+
   & > a {
     text-decoration: none;
     color: white;
