edited mobile versions

--- a/src/components/MemberSection/MemberSection.module.scss
+++ b/src/components/MemberSection/MemberSection.module.scss
@@ -50,5 +50,10 @@
       &__title, &__description {
         text-align: center;
       }
+
+      &__image {
+        max-width: 250px;
+        max-height: 400px;
+      }
     }
 }
