--- a/src/components/Contacts/Contacts.module.scss
+++ b/src/components/Contacts/Contacts.module.scss
@@ -47,6 +47,7 @@
       justify-content: space-between;
       align-items: center;
       height: 80%;
+      width: 100%;
     }
 
     .contacts__tel_link  {
